<resources>
    <string name="app_name">Student Data System</string>
    <string name="grades">Grades</string>
    <string name="attendance">Attendance</string>
    <string name="accommodation">Accommodation</string>
    <string name="schedule">Schedule</string>
    <string name="textview">textview</string>
    <string name="feedback">Feedback</string>
    <string name="directory">Directory</string>
    <string name="menu">Menu</string>
    <string name="title_activity_directory">Directory</string>

</resources>
